--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "webpack": "^4.35.2"
   },
   "scripts": {
-    "dev": "webpack --watch"
+    "dev": "webpack --watch",
+    "build": "webpack --mode=production"
   },
   "devDependencies": {
     "webpack-cli": "^3.3.5"
