--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
   "name": "svg-progress-steps",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "getting the svg dong out for progress steps",
   "main": "index.js",
   "author": "ross matheson",
   "license": "none",
-  "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "7",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "clean-webpack-plugin": "^3.0.0",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.35.2"
-  },
+  "dependencies": {},
   "scripts": {
-    "dev": "webpack --watch --mode=development --env.development",
-    "build": "webpack --mode=production --env.production"
+    "dev": "webpack --watch --mode=development",
+    "build": "webpack --mode=production"
   },
+  "browserslist": "> 0.25%, not dead",
   "devDependencies": {
-    "webpack-cli": "^3.3.5"
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "babel-loader": "^8.0.6",
+    "webpack-cli": "4.7.2",
+    "webpack": "5.44.0"
   }
 }
