--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
   "license": "none",
   "dependencies": {},
   "scripts": {
-    "dev": "webpack --watch --mode=development",
-    "build": "webpack --mode=production"
+    "dev": "yarn check_node && webpack --watch --mode=development",
+    "build": "yarn check_node && webpack --mode=production",
+    "check_node": "check-node-version --node $(cat .nvmrc)",
+    "audit:fix": "yarn check_node && npx yarn-audit-fix"
   },
   "browserslist": "> 0.25%, not dead",
   "devDependencies": {
-    "@babel/cli": "^7.14.5",
+    "@babel/cli": "^7.15.7",
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "babel-loader": "^8.0.6",
-    "webpack-cli": "4.7.2",
-    "webpack": "5.44.0"
+    "check-node-version": "^4.1.0",
+    "webpack": "5.44.0",
+    "webpack-cli": "4.7.2"
   }
 }
