--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
   "browserslist": "> 0.25%, not dead",
   "devDependencies": {
     "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "babel-loader": "^8.0.6",
-    "check-node-version": "^4.1.0",
-    "jest": "^27.2.4",
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "babel-loader": "^8.2.5",
+    "check-node-version": "^4.2.1",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "webpack": "5.44.0",
     "webpack-cli": "4.7.2"
   },
