--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
   },
   "browserslist": "> 0.25%, not dead",
   "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
-    "babel-loader": "^8.2.5",
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
     "check-node-version": "^4.2.1",
-    "jest": "^28.1.2",
-    "jest-environment-jsdom": "^28.1.2",
-    "webpack": "5.44.0",
-    "webpack-cli": "4.7.2"
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "webpack": "^5.76.2",
+    "webpack-cli": "^5.0.1"
   },
   "repository": {
     "type": "git",
